<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="280dp"
        android:layout_height="34dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="257dp"
        android:layout_marginRight="145dp"
        android:fontFamily="@font/merriweather_regular"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="286dp"
        android:layout_height="100dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="72dp"
        android:fontFamily="@font/pacifico_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green_400"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to" />

    <TextView
        android:id="@+id/join_us"
        android:layout_width="254dp"
        android:layout_height="21dp"
        android:layout_marginLeft="187dp"
        android:layout_marginTop="108dp"
        android:layout_marginRight="187dp"
        android:fontFamily="@font/merriweather_black"
        android:gravity="center"
        android:text="@string/join_us"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app" />

    <android.widget.Button
        android:id="@+id/continue_button"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:textSize="16sp"
        android:text="@string/continue_"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_us"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
