<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/name_app2"
        android:layout_width="226dp"
        android:layout_height="95dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="168dp"
        android:layout_marginRight="100dp"
        android:fontFamily="@font/pacifico_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green_400"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_phone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:scaleType="fitXY"
        android:src="@drawable/background_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="232dp"
        android:layout_height="45dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="252dp"
        android:fontFamily="@font/merriweather_bold"
        android:text="@string/log_in"
        android:textColor="@color/green_400"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app2" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in" />

    <EditText
        android:id="@+id/password_title"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <android.widget.Button
        android:id="@+id/continue2"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/continue_"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_title" />

    <TextView
        android:id="@+id/go_sign"
        android:layout_width="342dp"
        android:layout_height="21dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/merriweather_bold"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@drawable/custom_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continue2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>