<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/name_app3"
        android:layout_width="223dp"
        android:layout_height="97dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="100dp"
        android:fontFamily="@font/pacifico_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/green_400"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background_phone2"
        android:layout_width="wrap_content"
        android:layout_height="800dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:scaleType="fitXY"
        android:src="@drawable/background_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app3"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="252dp"
        android:fontFamily="@font/merriweather_bold"
        android:text="@string/sign_up"
        android:textColor="@color/green_400"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background_phone2" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/first_name"
        android:fontFamily="@font/inter_regular"
        android:textSize="16sp"
        android:inputType="textCapWords|textPersonName"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/last_name"
        android:inputType="textCapWords|textPersonName"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/first_name"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/email_address1"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/last_name"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/last_name"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/password_title1"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/email_address1"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/email_address1"
        app:layout_constraintTop_toBottomOf="@+id/email_address1" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/inter_regular"
        android:hint="Подтверждение пароля"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:padding="12dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/password_title1"
        app:layout_constraintStart_toStartOf="@+id/password_title1"
        app:layout_constraintTop_toBottomOf="@+id/password_title1" />

    <android.widget.Button
        android:id="@+id/sign_up_button"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <TextView
        android:id="@+id/go_log_in"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:fontFamily="@font/merriweather_bold"
        android:gravity="center"
        android:text="@string/already_have_account_log_in"
        android:textColor="@drawable/custom_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.126" />
</androidx.constraintlayout.widget.ConstraintLayout>